H3CIPMSJAVA-20180830/src/objects/Grandchild_Bundle_Information__c.object
<CustomObject>
    <fields>
        <fullName>Child_Bundle_Information__c</fullName>
        <label>Child Bundle Information</label>
        <referenceTo>Child_Bundle_Information__c</referenceTo>
        <relationshipLabel>Grandchild Bundle Information</relationshipLabel>
        <relationshipName>GrandchildBundleInformationToChildBundle</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandchild_Description__c</fullName>
        <label>Grandchild Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grandchild_Product_Number__c</fullName>
        <label>Grandchild Product Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Grandchild Bundle Information</label>
    <nameField>
        <label>Grandchild Serial Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>